GNOME Bugzilla – Bug 788114
alsasink: Fix Memory leak in payload not succuss case
Last modified: 2017-09-26 08:18:50 UTC
Created attachment 360332 [details] [review] patch file attached Hi , In gst_alsasink_payload , missed buffer unmap in payload failed case. code: out = gst_buffer_new_and_alloc (framesize); gst_buffer_map (buf, &iinfo, GST_MAP_READ); gst_buffer_map (out, &oinfo, GST_MAP_WRITE); if (!gst_audio_iec61937_payload (iinfo.data, iinfo.size, oinfo.data, oinfo.size, &sink->ringbuffer->spec, G_BIG_ENDIAN)) { gst_buffer_unref (out); return NULL; } gst_buffer_unmap (buf, &iinfo); gst_buffer_unmap (out, &oinfo); sol: gst_buffer_unmap added Patch attached. Please review and share feedback.
Comment on attachment 360332 [details] [review] patch file attached Please mark your patch attachments as patch :)
Created attachment 360411 [details] [review] patch file attached patch attached. Please review it
commit 0e8a510eda94cacdf2b7f47afd1a387352f09e5b (HEAD -> master) Author: Ponnam Srinivas <p.srinivas@samsung.com> Date: Mon Sep 25 10:42:33 2017 +0530 alsasink: Fix Memory leak in payload not succuss case https://bugzilla.gnome.org/show_bug.cgi?id=788114