alsasink: Fix Memory leak in payload not succuss case

https://bugzilla.gnome.org/show_bug.cgi?id=788114