ext/alsa/gstalsasink.c
@@ -1163,6 +1163,8 @@ gst_alsasink_payload (GstAudioBaseSink * sink, GstBuffer * buf)
 
     if (!gst_audio_iec61937_payload (iinfo.data, iinfo.size,
             oinfo.data, oinfo.size, &sink->ringbuffer->spec, G_BIG_ENDIAN)) {
+      gst_buffer_unmap (buf, &iinfo);
+      gst_buffer_unmap (out, &oinfo);
       gst_buffer_unref (out);
       return NULL;
     }
